# deep_search_persist

./: .gitignore  .pre-commit-config.yaml  .roomodes  .roomodes.bck  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  persistence_plan.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.cfg  setup.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
deep_search_persist/: __init__.py  __main__.py  launch_webui.py
deep_search_persist/deep_search_persist/: __init__.py  _prompts.py  api_endpoints.py  api_models.py  configuration.py  helper_classes.py  helper_functions.py  llm_providers.py  local_ai.py  main_routine.py  research.config.local.toml  research.example.toml  research_session.py
deep_search_persist/deep_search_persist/logging/: __init__.py  logging_config.py
deep_search_persist/deep_search_persist/persistence/: __init__.py  __main__.py  session_persistence.py  utils.py
deep_search_persist/project-management/: task-context-fix-hue-spacing-calculator.md  workflow-state.md
deep_search_persist/simple_webui/: __init__.py  color_schemes.py  gradio_online_mode.py  gradio_themes.py  new_color_schemes.py  ui_styles.py
deep_search_persist/simple_webui/static/: color-scheme.js  ui-utils.js
deep_search_persist/simple_webui/utils/: __init__.py  cam16ucs.py  color_accessibility.py  color_convert.py  color_schemes.py  hue_spacing_calculator.py
deep_search_persist/tests/: __init__.py  test_api_endpoints.py  test_configuration.py  test_helper_functions.py  test_local_ai.py  test_main_routine.py  test_ollama.py  test_research_session.py
docker/: .env  .env.example  Dockerfile  docker-compose.persist.yml  research.toml
docker/docker/nginx/: mime.types  nginx.conf
docker/docker/searxng/: settings.yml
docker/nginx/: nginx.conf
docker/persist-config/: research.toml.example
docker/searxng/: cons_settings.yml  favicons.toml  limiter.toml  settings.yml  uwsgi.ini
docs/: DOCKER_DEPLOYMENT.md  SCREENSHOTS_GUIDE.md  webui-consolidation-and-persistence-fixes.md
docs/images/: README.md
docs/project-management/: task-context-define-test-requirements-2025-05-21.md  task-context-fix-api-error-1.md  task-context-fix-code-errors-001.md  task-context-fix-main-routine-errors-003.md  task-context-fix-pyright-error-002.md  task-context-fix-session-persistence-return-issue.md  task-context-git-commit-fix-api-error-1.md  task-context-maestro-subtask-fix-app-startup-2025-05-22.md  task-context-test-architecture-2025-05-21.md  task-context-test-implementation-execution-2025-05-21.md  task-context-test-plan-definition-2025-05-21.md  task-context-test-refinement-completion-2025-05-21.md  task-context-test-requirements-2025-05-21.md  task-context-test-requirements.md  test-requirements.md  workflow-state.md
docs/requirements/: test-requirements-spec.md
docs/reviews/: backend-review-hue-spacing-20250530.md  backend-review-pyright-fixes-20250530.md  code-review-line-length-isort-2025-05-18.md
docs/testing/: test-plan-definition-2025-05-21.md
requirements/: requirements-dev.txt
tests/api/: test_api_comprehensive.py
tests/docker/: test_docker_integration.py
tests/e2e/: test_research_workflow.py
tests/integration/: test_api_persistence_integration.py  test_color_integration.py  test_helper_functions_integration.py
tests/unit/: test_api_models.py  test_color_accessibility.py  test_configuration.py  test_helper_classes.py  test_llm_providers.py  test_local_ai.py  test_persistence_utils.py  test_research_session.py
tests/webui/: test_webui_functionality.py
