[metadata]
name = deep-search
version = 0.2.0
description = Deep Search Persist Module
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrew Cox
author_email = dev@andrewcox.doctor
license = "GPL-3.0-or-later"
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.11,<3.13

[options.extras_require]
web =
    gradio>=4.0.0
    requests

[options.packages.find]
include = deep_search_persist*

[console_scripts]
deep-search = deep_search_persist.__main__:main
deep-search-launch-webui = deep_search_persist.launch_webui:main

[flake8]
max-line-length = 120
# Ignore rules that conflict with black or are less critical
# E203: whitespace before ':' (black handles this)
# W503: line break before binary operator (black prefers this, flake8 used to warn)
extend-ignore = E203, W503

[tool.black]
line-length = 120
